--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700"> -->
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/icomoon.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="dist/css/style.css">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine.min.css">
 
@@ -52,7 +50,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
         <script src="http://google.com/jsapi"></script>
 
-        <script src="js/app.js"></script>
+        <script src="dist/js/all.js"></script>
 
         <script src="jasmine/spec/feedreader.js"></script>
     </body>
